# LinceGenerator

./: README.md
alerta_temperatura_dht11/: Cargo.toml  README.md  config.toml  deploy.sh
alerta_temperatura_dht11/src/: app.rs  comunicacion.rs  config.rs  main.rs  sensores.rs
lince_generator/: app.py
lince_generator/templates/: almacenamiento_rs.j2  app_rs.j2  cargo_toml.j2  comunicacion_rs.j2  config_rs.j2  config_toml.j2  deploy_sh.j2  index.html  main_rs.j2  readme_md.j2  sensores_rs.j2
monitor_lluvia_mhrd/: Cargo.toml  README.md  config.toml  deploy.sh
monitor_lluvia_mhrd/src/: almacenamiento.rs  app.rs  config.rs  main.rs  sensores.rs
