[package]
name = "alerta_temperatura_dht11"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "alerta_temperatura_dht11"
path = "src/main.rs"

[dependencies]
lince = { git = "https://github.com/Saiduts/lince" }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
